fixes address edit view on mobile

--- a/app/assets/stylesheets/addresses.scss
+++ b/app/assets/stylesheets/addresses.scss
@@ -467,6 +467,17 @@
           font-weight: 400;
         }
 
+        @media only screen and (max-width: $small-screen) {
+          position: absolute;
+          width: 100%;
+          height: 240px;
+          background: $white;
+          padding: 10px;
+          margin-left: -42px;
+          border-bottom: 1px solid rgba($black,.25);
+          @include box-shadow(0 3px 6px rgba($black,.25));
+        }
+
         .label {
           background: transparent;
           color: #C1C1C1;
